Add AI-powered natural language to SQL query generation
- Created gemini.service.js with database schema context
- Added POST /api/admin/sql/generate endpoint using Gemini API
- Added AI Query Generator UI in SQL console with input field
- User types natural language, AI generates SQL for review
- Requires GEMINI_API_KEY environment variable

--- a/server/.env.example
+++ b/server/.env.example
@@ -39,3 +39,6 @@ SMS_SENDER_ID=
 TURN_SERVER_URL=
 TURN_USERNAME=
 TURN_PASSWORD=
+
+# AI/Gemini (for SQL query generation)
+GEMINI_API_KEY=your-gemini-api-key
