--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "@google/generative-ai": "^0.24.1",
     "@prisma/client": "5.7.0",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^2.8.0",
     "cors": "^2.8.5",
     "csv-parser": "^3.2.0",
     "dotenv": "^16.3.1",
