--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
         "html2canvas": "^1.4.1",
         "html5-qrcode": "^2.3.8",
         "i18next": "^23.7.11",
+        "jsbarcode": "^3.12.1",
         "lucide-react": "^0.303.0",
         "next": "14.0.4",
         "next-i18next": "^15.1.1",
