--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,9 @@
     "dependencies": {
         "@hookform/resolvers": "^3.3.2",
         "@tanstack/react-query": "^5.17.0",
+        "@types/node": "^20.10.6",
+        "@types/react": "^18.2.46",
+        "@types/react-dom": "^18.2.18",
         "autoprefixer": "^10.4.16",
         "axios": "^1.6.2",
         "clsx": "^2.0.0",
@@ -33,15 +36,12 @@
         "socket.io-client": "^4.7.2",
         "tailwind-merge": "^2.2.0",
         "tailwindcss": "^3.4.0",
+        "typescript": "^5.3.3",
         "zod": "^3.22.4",
         "zustand": "^4.4.7"
     },
     "devDependencies": {
-        "@types/node": "^20.10.6",
-        "@types/react": "^18.2.46",
-        "@types/react-dom": "^18.2.18",
         "eslint": "^8.56.0",
-        "eslint-config-next": "14.0.4",
-        "typescript": "^5.3.3"
+        "eslint-config-next": "14.0.4"
     }
 }
